# etl-finance-pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pyproyect.toml  requirements.txt  test.py  tree.py
.github/workflows/: ci.yml
config/: default.yml  testing.yml
src/: run.py
src/etl/extract/: base_reader.py  csv_reader.py  extractor.py  file_detector.py  parquet_reader.py
src/etl/load/: exporter.py
src/etl/transform/: gaps.py  normalize.py  resample.py
src/etl/utils/: config_loader.py  config_model.py  reporting.py
src/utils/: logger.py
tests/: test_config.py  test_config_loading.py  test_phase5_normalization.py  test_phase7_export.py  test_phase8_gaps.py  test_phase9_resample.py  test_timezone_normalize.py  test_transform_normalize.py
