[project]
name = "etl"  # nombre de distribución (con guiones está bien)
version = "0.1.0"
description = "Professional ETL pipeline for financial market data (OHLC/BIDASK) with validation, normalization, timezone handling, gap detection and parquet export."
authors = [
    { name = "Sebastian David Pinzon Zambrano" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    "python-dateutil>=2.8.2",
    "tqdm>=4.66.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# ✅ Configuración de setuptools
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
# ✅ Buscar paquetes con underscores (Python convention)
include = ["etl*"]

# -----------------------------
# Ruff (linter)
# -----------------------------
[tool.ruff]
line-length = 100
fix = true
exclude = ["data/", "build/", "dist/"]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

# -----------------------------
# Black (formateo)
# -----------------------------
[tool.black]
line-length = 100
target-version = ["py310"]

# -----------------------------
# isort (import sorting)
# -----------------------------
[tool.isort]
profile = "black"
line_length = 100

# -----------------------------
# pytest (testing)
# -----------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"